--- a/index.html
+++ b/index.html
@@ -658,6 +658,20 @@
                             </div> 
                         </div>                         
                     </div>
+                    <div class="col-md-6 col-lg-4 Athletics">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/atlethics7.gif" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/atlethics7.gif"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div> 
+                        </div>                         
+                    </div>
+
+
                     <div class="col-md-6 col-lg-4 Drawing">
                         <div class="portfolio-item">
                             <img src="assets/imgs/paint1.jpg" class="img-fluid" alt="...">
@@ -675,6 +689,19 @@
                             <img src="assets/imgs/paint2.jpg" class="img-fluid" alt="...">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/paint2.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 Lindy">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/dance.gif" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/dance.gif"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
