--- a/index.html
+++ b/index.html
@@ -660,6 +660,42 @@
                     </div>
                     <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
+                            <img src="assets/imgs/atletics4.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/atletics4.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div> 
+                        </div>                         
+                    </div>
+                    <div class="col-md-6 col-lg-4 Athletics">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/atletics5.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/atletics5.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div> 
+                        </div>                         
+                    </div>
+                    <div class="col-md-6 col-lg-4 Athletics">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/atlectics6.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/atlectics6.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div> 
+                        </div>                         
+                    </div>
+                    <div class="col-md-6 col-lg-4 Athletics">
+                        <div class="portfolio-item">
                             <img src="assets/imgs/atlethics7.gif" class="img-fluid" alt="...">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/atlethics7.gif"></a>
@@ -696,12 +732,181 @@
                             </div>
                         </div>                                                     
                     </div>
+                    <div class="col-md-6 col-lg-4 Drawing">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/paint3.png" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/paint3.png"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 Drawing">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/paint4.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/paint4.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 Drawing">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/paint5.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/paint5.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 Drawing">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/paint6.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/paint6.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
 
                     <div class="col-md-6 col-lg-4 Lindy">
                         <div class="portfolio-item">
                             <img src="assets/imgs/dance.gif" class="img-fluid" alt="...">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/dance.gif"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 Lindy">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/dance1.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/dance1.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 Lindy">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/dance2.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/dance2.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 Lindy">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/dance3.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/dance3.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 Lindy">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/dance5.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/dance5.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 Parties">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/party1.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/party1.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 Parties">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/party2.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/party2.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 Parties">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/party3.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/party3.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 Parties">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/party4.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/party4.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 Parties">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/party5.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/party5.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 Parties">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/party6.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/party6.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
