--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                     <a href="#" data-filter=".Athletics" class="active">Athletics</a>
                     <a href="#" data-filter=".Drawing">Drawing</a>
                     <a href="#" data-filter=".Lindy">Lindy Hop</a>
-                    <a href="#" data-filter=".Parties">Kids' Parties</a>
+                    <!-- <a href="#" data-filter=".Parties">Kids' Parties</a> -->
                 </div>
                 <div class="portfolio-container">
                     <div class="col-md-6 col-lg-4 Athletics">
@@ -842,7 +842,7 @@
                         </div>                                                     
                     </div>
 
-                    <div class="col-md-6 col-lg-4 Parties">
+                    <!-- <div class="col-md-6 col-lg-4 Parties">
                         <div class="portfolio-item">
                             <img src="assets/imgs/party1.jpg" class="img-fluid" alt="...">
                             <div class="content-holder">
@@ -913,7 +913,7 @@
                                 </div>
                             </div>
                         </div>                                                     
-                    </div>
+                    </div> -->
 
                 </div> 
             </div>  
